# lib_zdtm_sync

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  bootstrap.sh  clean_bootstrap.sh  configure.ac
docs/: lib_zdtm_sync_detailed_plan.html  lib_zdtm_sync_detailed_plan.planner
src/: Makefile.am  config.h.in  zdtm.c  zdtm.h  zdtm_aay_msg.c  zdtm_aay_msg.h  zdtm_adi_msg.c  zdtm_adi_msg.h  zdtm_adr_msg.c  zdtm_adr_msg.h  zdtm_adw_msg.c  zdtm_adw_msg.h  zdtm_aex_msg.c  zdtm_aex_msg.h  zdtm_aig_msg.c  zdtm_aig_msg.h  zdtm_amg_msg.c  zdtm_amg_msg.h  zdtm_ang_msg.c  zdtm_ang_msg.h  zdtm_asy_msg.c  zdtm_asy_msg.h  zdtm_atg_msg.c  zdtm_atg_msg.h  zdtm_common.c  zdtm_common.h  zdtm_export.h  zdtm_gentypes.h  zdtm_log.c  zdtm_log.h  zdtm_msgs.c  zdtm_msgs.h  zdtm_net.c  zdtm_net.h  zdtm_proto.c  zdtm_proto.h  zdtm_ray_msg.c  zdtm_ray_msg.h  zdtm_rdd_msg.c  zdtm_rdd_msg.h  (+34 more)
src/testing/: Makefile.am  zdtm_prepare_message_test.c
testing/: Makefile.am  zdtm_prepare_message_test.c  zdtm_test_daemon.c
