AM_CFLAGS = -Wall -Werror
zdtmincdir = $(includedir)/zdtmsync
lib_LTLIBRARIES = libzdtmsync.la
libzdtmsync_la_SOURCES = zdtm_sync.c zdtm_common.c zdtm_aay_msg.c zdtm_adi_msg.c zdtm_aig_msg.c zdtm_ang_msg.c zdtm_asy_msg.c zdtm_atg_msg.c
zdtminc_HEADERS = zdtm_sync.h zdtm_common.c zdtm_aay_msg.h zdtm_adi_msg.h zdtm_aex_msg.h zdtm_aig_msg.h zdtm_amg_msg.h zdtm_ang_msg.h zdtm_asy_msg.h zdtm_atg_msg.h config.h 
